20230625 イベント処理追加

--- a/MaihimeFXEnjuRW/src/main/resources/net/konohana/sakuya/maihime/enjurw/ticket01/ticket-01.fxml
+++ b/MaihimeFXEnjuRW/src/main/resources/net/konohana/sakuya/maihime/enjurw/ticket01/ticket-01.fxml
@@ -390,10 +390,10 @@
                               <Button mnemonicParsing="false" onAction="#onToStaBtn01Click" prefHeight="77.0" prefWidth="111.0" text="苆谷" />
                               <Button mnemonicParsing="false" onAction="#onToStaBtn02Click" prefHeight="77.0" prefWidth="119.0" text="東苆谷" GridPane.columnIndex="1" />
                               <Button mnemonicParsing="false" onAction="#onToStaBtn03Click" prefHeight="77.0" prefWidth="135.0" text="茄谷" GridPane.columnIndex="2" />
-                              <Button mnemonicParsing="false" prefHeight="77.0" prefWidth="119.0" text="上茄谷" GridPane.columnIndex="3" />
-                              <Button mnemonicParsing="false" prefHeight="77.0" prefWidth="106.0" text="笥谷" GridPane.columnIndex="4" />
-                              <Button mnemonicParsing="false" prefHeight="77.0" prefWidth="108.0" text="鵩山" textAlignment="CENTER" GridPane.columnIndex="5" />
-                              <Button mnemonicParsing="false" prefHeight="77.0" prefWidth="125.0" text="上鵩山" GridPane.rowIndex="1" />
+                              <Button mnemonicParsing="false" onAction="#onToStaBtn04Click" prefHeight="77.0" prefWidth="119.0" text="上茄谷" GridPane.columnIndex="3" />
+                              <Button mnemonicParsing="false" onAction="#onToStaBtn05Click" prefHeight="77.0" prefWidth="106.0" text="笥谷" GridPane.columnIndex="4" />
+                              <Button mnemonicParsing="false" onAction="#onToStaBtn06Click" prefHeight="77.0" prefWidth="108.0" text="鵩山" textAlignment="CENTER" GridPane.columnIndex="5" />
+                              <Button mnemonicParsing="false" onAction="#onToStaBtn07Click" prefHeight="77.0" prefWidth="125.0" text="上鵩山" GridPane.rowIndex="1" />
                               <Button mnemonicParsing="false" prefHeight="77.0" prefWidth="125.0" text="筏谷" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                               <Button mnemonicParsing="false" prefHeight="77.0" prefWidth="125.0" text="中筏谷" GridPane.columnIndex="2" GridPane.rowIndex="1" />
                               <Button mnemonicParsing="false" prefHeight="77.0" prefWidth="129.0" text="蛞川" GridPane.columnIndex="3" GridPane.rowIndex="1" />
