--- a/MaihimeFXEnjuRW/src/main/resources/net/konohana/sakuya/maihime/enjurw/ticket01/ticket-01.fxml
+++ b/MaihimeFXEnjuRW/src/main/resources/net/konohana/sakuya/maihime/enjurw/ticket01/ticket-01.fxml
@@ -404,11 +404,11 @@
                               <Button mnemonicParsing="false" onAction="#onToStaBtn15Click" prefHeight="77.0" prefWidth="111.0" text="諾川" GridPane.columnIndex="2" GridPane.rowIndex="2" />
                               <Button mnemonicParsing="false" onAction="#onToStaBtn16Click" prefHeight="77.0" prefWidth="119.0" text="筥谷" GridPane.columnIndex="3" GridPane.rowIndex="2" />
                               <Button mnemonicParsing="false" onAction="#onToStaBtn17Click" prefHeight="77.0" prefWidth="108.0" text="本筥谷" GridPane.columnIndex="4" GridPane.rowIndex="2" />
-                              <Button mnemonicParsing="false" prefHeight="77.0" prefWidth="113.0" text="笒谷" GridPane.columnIndex="5" GridPane.rowIndex="2" />
-                              <Button mnemonicParsing="false" prefHeight="94.0" prefWidth="106.0" text="畭谷" GridPane.rowIndex="3" />
-                              <Button mnemonicParsing="false" prefHeight="77.0" prefWidth="126.0" text="上畭谷" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                              <Button mnemonicParsing="false" prefHeight="77.0" prefWidth="134.0" text="箬谷" GridPane.columnIndex="2" GridPane.rowIndex="3" />
-                              <Button mnemonicParsing="false" prefHeight="77.0" prefWidth="114.0" text="西箬谷" GridPane.columnIndex="3" GridPane.rowIndex="3" />
+                              <Button mnemonicParsing="false" onAction="#onToStaBtn18Click" prefHeight="77.0" prefWidth="113.0" text="笒谷" GridPane.columnIndex="5" GridPane.rowIndex="2" />
+                              <Button mnemonicParsing="false" onAction="#onToStaBtn19Click" prefHeight="94.0" prefWidth="106.0" text="畭谷" GridPane.rowIndex="3" />
+                              <Button mnemonicParsing="false" onAction="#onToStaBtn20Click" prefHeight="77.0" prefWidth="126.0" text="上畭谷" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                              <Button mnemonicParsing="false" onAction="#onToStaBtn21Click" prefHeight="77.0" prefWidth="134.0" text="箬谷" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+                              <Button mnemonicParsing="false" onAction="#onToStaBtn22Click" prefHeight="77.0" prefWidth="114.0" text="西箬谷" GridPane.columnIndex="3" GridPane.rowIndex="3" />
                               <Button mnemonicParsing="false" prefHeight="77.0" prefWidth="117.0" text="苕谷" GridPane.columnIndex="4" GridPane.rowIndex="3" />
                               <Button mnemonicParsing="false" prefHeight="77.0" prefWidth="114.0" text="東苕谷" GridPane.columnIndex="5" GridPane.rowIndex="3" />
                               <Button mnemonicParsing="false" prefHeight="87.0" prefWidth="106.0" text="扆谷" GridPane.rowIndex="4" />
