20230630 イベント処理実装

--- a/MaihimeFXEnjuRW/src/main/resources/net/konohana/sakuya/maihime/enjurw/ticket01/ticket-01.fxml
+++ b/MaihimeFXEnjuRW/src/main/resources/net/konohana/sakuya/maihime/enjurw/ticket01/ticket-01.fxml
@@ -413,13 +413,13 @@
                               <Button mnemonicParsing="false" onAction="#onToStaBtn24Click" prefHeight="77.0" prefWidth="114.0" text="東苕谷" GridPane.columnIndex="5" GridPane.rowIndex="3" />
                               <Button mnemonicParsing="false" onAction="#onToStaBtn25Click" prefHeight="87.0" prefWidth="106.0" text="扆谷" GridPane.rowIndex="4" />
                               <Button mnemonicParsing="false" onAction="#onToStaBtn26Click" prefHeight="77.0" prefWidth="118.0" text="奥扆谷" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                              <Button mnemonicParsing="false" prefHeight="77.0" prefWidth="119.0" text="珩谷" GridPane.columnIndex="2" GridPane.rowIndex="4" />
-                              <Button mnemonicParsing="false" prefHeight="77.0" prefWidth="123.0" text="中珩谷" GridPane.columnIndex="3" GridPane.rowIndex="4" />
-                              <Button mnemonicParsing="false" prefHeight="77.0" prefWidth="110.0" text="上珩谷" GridPane.columnIndex="4" GridPane.rowIndex="4" />
-                              <Button mnemonicParsing="false" prefHeight="77.0" prefWidth="110.0" text="玿谷" GridPane.columnIndex="5" GridPane.rowIndex="4" />
-                              <Button mnemonicParsing="false" prefHeight="77.0" prefWidth="115.0" text="上玿谷" GridPane.rowIndex="5" />
-                              <Button mnemonicParsing="false" prefHeight="77.0" prefWidth="118.0" text="珮谷" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-                              <Button mnemonicParsing="false" prefHeight="77.0" prefWidth="124.0" text="上珮谷" GridPane.columnIndex="2" GridPane.rowIndex="5" />
+                              <Button mnemonicParsing="false" onAction="#onToStaBtn27Click" prefHeight="77.0" prefWidth="119.0" text="珩谷" GridPane.columnIndex="2" GridPane.rowIndex="4" />
+                              <Button mnemonicParsing="false" onAction="#onToStaBtn28Click" prefHeight="77.0" prefWidth="123.0" text="中珩谷" GridPane.columnIndex="3" GridPane.rowIndex="4" />
+                              <Button mnemonicParsing="false" onAction="#onToStaBtn29Click" prefHeight="77.0" prefWidth="110.0" text="上珩谷" GridPane.columnIndex="4" GridPane.rowIndex="4" />
+                              <Button mnemonicParsing="false" onAction="#onToStaBtn30Click" prefHeight="77.0" prefWidth="110.0" text="玿谷" GridPane.columnIndex="5" GridPane.rowIndex="4" />
+                              <Button mnemonicParsing="false" onAction="#onToStaBtn31Click" prefHeight="77.0" prefWidth="115.0" text="上玿谷" GridPane.rowIndex="5" />
+                              <Button mnemonicParsing="false" onAction="#onToStaBtn32Click" prefHeight="77.0" prefWidth="118.0" text="珮谷" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                              <Button mnemonicParsing="false" onAction="#onToStaBtn33Click" prefHeight="77.0" prefWidth="124.0" text="上珮谷" GridPane.columnIndex="2" GridPane.rowIndex="5" />
                               <Button mnemonicParsing="false" prefHeight="77.0" prefWidth="122.0" text="荍谷" textAlignment="CENTER" GridPane.columnIndex="3" GridPane.rowIndex="5" />
                               <Button mnemonicParsing="false" prefHeight="77.0" prefWidth="113.0" text="上荍谷" textAlignment="CENTER" GridPane.columnIndex="4" GridPane.rowIndex="5" />
                               <Button mnemonicParsing="false" prefHeight="77.0" prefWidth="115.0" GridPane.columnIndex="5" GridPane.rowIndex="5" />
